# gitsc

./: CONTRIBUTING.md  Cargo.toml  GEMINI.md  README.md  config.yml  rustfmt.toml
src/: lib.rs  main.rs
src/ai/: mod.rs  repository.rs
src/ai/cache/: diff_hasher.rs  mod.rs  redis_cache.rs  sqlite_cache.rs
src/ai/providers/: gemini.rs  mod.rs  ollama.rs
src/analyzer/: mod.rs
src/cli/: mod.rs
src/config/: mod.rs
src/error/: mod.rs
src/formatter/: mod.rs
src/git/: mod.rs
src/logger/: mod.rs
