[package]
name = "gitsc"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
dirs = "5.0"
clap = { version = "4.0", features = ["derive"] }
reqwest = { version = "0.12.23", features = ["json"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["full"] }
async-trait = "0.1.89"
env_logger = "0.11"
log = "0.4"
redis = { version = "0.25", features = ["tokio-comp"] }
sha2 = "0.10"
